big refactor, moved to flask, lots of styling

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>sadlkfasdlfjsl Skeleton</title>
+    <title>Hello Skeleton</title>
 </head>
 <body>
 <div id="root"></div>
-<script type="text/javascript" src="/bundle.js"></script></body>
+<script type="text/javascript" src="/static/bundle.js"></script></body>
 </html>
